@@ -2,11 +2,11 @@ package com.jack.aquark.service.impl;
 
 import com.jack.aquark.entity.DailyAggregation;
 import com.jack.aquark.entity.HourlyAggregation;
-import com.jack.aquark.entity.SensorData;
+import com.jack.aquark.entity.TempSensorData;
 import com.jack.aquark.repository.DailyAggregationRepository;
 import com.jack.aquark.repository.HourlyAggregationRepository;
+import com.jack.aquark.repository.TempSensorDataRepository;
 import com.jack.aquark.service.AggregationService;
-import com.jack.aquark.service.SensorDataService;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
@@ -20,16 +20,16 @@ import org.springframework.stereotype.Service;
 @AllArgsConstructor
 @Slf4j
 public class AggregationServiceImpl implements AggregationService {
-
-  private final SensorDataService sensorDataService;
+  
   private final HourlyAggregationRepository hourlyAggregationRepository;
   private final DailyAggregationRepository dailyAggregationRepository;
+  private final TempSensorDataRepository tempSensorDataRepository;
 
   @Override
   public void saveHourlyAggregation(HourlyAggregation aggregation) {
     hourlyAggregationRepository.save(aggregation);
     log.info(
-        "Saved hourly aggregation: {} {} {}: sum={}, avg={}",
+        "Saved hourly aggregation for {} hour {} sensor {}: sum={}, avg={}",
         aggregation.getObsDate(),
         aggregation.getObsHour(),
         aggregation.getSensorName(),
@@ -37,36 +37,39 @@ public class AggregationServiceImpl implements AggregationService {
         aggregation.getAvgValue());
   }
 
-  /** Compute hourly aggregations for the last hour. */
+  @Override
   public void aggregateHourlyData() {
+    // Existing aggregation from raw SensorData (if needed)
+    // Here you might decide to calculate from temp table instead.
     LocalDateTime now = LocalDateTime.now();
     LocalDateTime oneHourAgo = now.minusHours(1);
     LocalDate currentDate = now.toLocalDate();
     int currentHour = now.getHour();
 
-    // Get sensor data for the last hour
-    List<SensorData> hourlyData = sensorDataService.getSensorDataByTimeRange(oneHourAgo, now);
+    List<TempSensorData> tempData =
+        tempSensorDataRepository.findAllByObsTimeBetween(oneHourAgo, now);
+    if (tempData.isEmpty()) {
+      log.info("No temporary sensor data available for the last hour.");
+      return;
+    }
 
-    // For each sensor, aggregate values. Here we use a map of sensorName -> getter.
-    Map<String, Function<SensorData, Double>> fieldAccessors = new LinkedHashMap<>();
-    fieldAccessors.put("v1", SensorData::getV1);
-    fieldAccessors.put("v2", SensorData::getV2);
-    fieldAccessors.put("v3", SensorData::getV3);
-    fieldAccessors.put("v4", SensorData::getV4);
-    fieldAccessors.put("v5", SensorData::getV5);
-    fieldAccessors.put("v6", SensorData::getV6);
-    fieldAccessors.put("v7", SensorData::getV7);
-    fieldAccessors.put("rh", SensorData::getRh);
-    fieldAccessors.put("tx", SensorData::getTx);
-    fieldAccessors.put("echo", SensorData::getEcho);
-    fieldAccessors.put("rainD", SensorData::getRainD);
-    fieldAccessors.put("speed", SensorData::getSpeed);
+    Map<String, Function<TempSensorData, Double>> fieldAccessors = new LinkedHashMap<>();
+    fieldAccessors.put("v1", TempSensorData::getV1);
+    fieldAccessors.put("v2", TempSensorData::getV2);
+    fieldAccessors.put("v3", TempSensorData::getV3);
+    fieldAccessors.put("v4", TempSensorData::getV4);
+    fieldAccessors.put("v5", TempSensorData::getV5);
+    fieldAccessors.put("v6", TempSensorData::getV6);
+    fieldAccessors.put("v7", TempSensorData::getV7);
+    fieldAccessors.put("rh", TempSensorData::getRh);
+    fieldAccessors.put("tx", TempSensorData::getTx);
+    fieldAccessors.put("echo", TempSensorData::getEcho);
+    fieldAccessors.put("rainD", TempSensorData::getRainD);
+    fieldAccessors.put("speed", TempSensorData::getSpeed);
 
     fieldAccessors.forEach(
         (sensorName, getter) -> {
-          List<Double> values =
-              hourlyData.stream().map(getter).filter(Objects::nonNull).collect(Collectors.toList());
-
+          List<Double> values = tempData.stream().map(getter).filter(Objects::nonNull).toList();
           double sum = values.stream().mapToDouble(Double::doubleValue).sum();
           double avg = values.isEmpty() ? 0.0 : sum / values.size();
 
@@ -79,26 +82,16 @@ public class AggregationServiceImpl implements AggregationService {
                   .avgValue(avg)
                   .build();
 
-          hourlyAggregationRepository.save(aggregation);
-          log.info(
-              "Hourly aggregation saved for {} at hour {} sensor {}: sum={}, avg={}",
-              currentDate,
-              currentHour,
-              sensorName,
-              sum,
-              avg);
+          saveHourlyAggregation(aggregation);
         });
   }
 
-  /**
-   * Build daily aggregations by simply taking the 24 hourly aggregation records for a given day.
-   * (This example assumes that hourly aggregation runs have stored 24 records per sensor per day.)
-   */
+  @Override
   public void aggregateDailyData() {
     LocalDate yesterday = LocalDate.now().minusDays(1);
     log.info("Building daily aggregation for {}", yesterday);
 
-    // Retrieve all hourly aggregations for yesterday
+    // Retrieve all hourly aggregations for yesterday.
     List<HourlyAggregation> hourlyAggregations =
         hourlyAggregationRepository.findByObsDate(yesterday);
     if (hourlyAggregations.isEmpty()) {
@@ -106,16 +99,12 @@ public class AggregationServiceImpl implements AggregationService {
       return;
     }
 
-    // Group by sensor name
     Map<String, List<HourlyAggregation>> sensorToHourly =
         hourlyAggregations.stream()
             .collect(Collectors.groupingBy(HourlyAggregation::getSensorName));
 
-    // For each sensor, insert 24 daily aggregation records (or update if they already exist)
     sensorToHourly.forEach(
         (sensorName, hourlyList) -> {
-          // In this approach, each hourly record is simply copied to the daily_aggregation table.
-          // Alternatively, you could compute overall daily sums/averages.
           for (HourlyAggregation hourly : hourlyList) {
             DailyAggregation dailyAgg =
                 DailyAggregation.builder()
@@ -133,5 +122,18 @@ public class AggregationServiceImpl implements AggregationService {
                 sensorName);
           }
         });
+  }
+
+  @Override
+  public void processTempDataForAggregations() {
+    // First, aggregate hourly data from the temporary table.
+    aggregateHourlyData();
+
+    // Then, aggregate daily data from the hourly aggregation table.
+    aggregateDailyData();
+
+    // Finally, clear the temporary table for the next fetch cycle.
+    tempSensorDataRepository.deleteAll();
+    log.info("Temporary sensor data cleared after processing aggregations.");
   }
 }
